# yang-policy-pap

./: Dockerfile  README.md  example.json  policies.db  pyproject.toml
.github/workflows/: docker-build-and-push.yml
app/: main.py
policies/: policies.db
yang-policy-pap/: main.py
