[tool.poetry]
name = "app"
version = "0.1.0"
description = "Policy Administration Point (PAP) for YANG-based policies"
authors = ["LuciaCabanillasRodriguez <lucia.cabanillasrodriguez@telefonica.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.111.0"
uvicorn = "^0.25.0"
requests = "^2.31.0"
pydantic = "^2.7.0"
lxml = "^4.9.3"
opa-python-client = "^2.0.3"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
black = "^23.9.1"
isort = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
